add + chance if rod enchanted